# Eureka

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  EUREKA_MVP_IMPLEMENTATION_PLAN.md  Makefile  SECURITY.md  docker-compose.yml  prompt.md  readme.md
backend/: Dockerfile  alembic.ini  main.py  pyproject.toml
backend/alembic/: README  env.py
backend/alembic/versions/: 20260425_0001_create_users_table.py  20260427_0005_add_username_to_users.py  20260501_0005_create_stores_table.py  20260501_0006_add_layout_versions_and_store_id.py  20260503_0010_create_import_log.py  (+6 more)
backend/core/: api_response.py  config.py  constants.py  deps.py  security.py
backend/db/: base.py  session.py
backend/ingestion/: file_detector.py  ingestion_service.py  sku_deduplicator.py  storage_service.py
backend/models/: __init__.py  import_log.py  layout.py  placement.py  planogram.py  planogram_version.py  product.py  sales_data.py  shelf.py  store.py  user.py  zone.py
backend/schemas/: admin_onboarding.py  auth.py  ingestion.py  layout.py  planogram.py  product.py  sales.py  shelf.py  store.py  user.py  zone.py
backend/services/: assortment_filter.py  auth_service.py  data_normalization.py  export_service.py  layout_service.py  plan_limit_service.py  planogram_engine.py  planogram_service.py  store_intelligence.py  store_service.py
backend/tests/: conftest.py  test_admin_onboarding.py  test_admin_users.py  test_auth.py  test_layouts.py  test_plan_limits.py  test_planogram_generate.py  test_products_api.py  test_sales_api.py  test_shelves.py  test_stores.py  test_zones.py
(+115 files in other folders)
